...
                    ),
                  ),
                ),
                Padding(
                  padding: constants.textFieldPadding,
                  child: TextFormField(
                      key: Key('loginemail'),
                      controller: _emailController,
                      style: GoogleFonts.montserrat(),
                      validator: (value) => EmailFieldValidator.validate(value!),
                      decoration: InputDecoration(
                        label: Text('Phone number or Email ID',
                            style: GoogleFonts.nunito(fontSize: 17)),
...
                            borderRadius: BorderRadius.circular(5)),
                      )),
                ),
                Padding(
                  padding: constants.textFieldPadding,
                  child: PasswordFormFieldWidget(
                    key: Key('loginpwd'),
                      controller: _passwordController,
                      style: GoogleFonts.montserrat(),
                      validator: (value) => PasswordFieldValidator.validate(value!)
                    , hintText: 'Enter password', label: 'Password',
                      ),
                ),
...
                    child: showProgress
                        ? const Padding(
                            padding: EdgeInsets.all(8.0),
                            child: CircularProgressIndicator()
                          )
                        : ElevatedButton(
                      key: Key('loginbtn'),
                            style: ElevatedButton.styleFrom(),
                            child: const Text(
                              'LOG IN',
                            ),
                            onPressed: () async {
                              if (_formKey.currentState!.validate()) {
...
