...
          subTitle,
          style: GoogleFonts.raleway(),
        ),
        actions: <Widget>[
          negativeText != null
              ? TextButton(
            key:Key('negab'),
                  child: Text(
                    negativeText,
                    style: GoogleFonts.raleway(),
                  ),
                  onPressed: () {
                    Navigator.of(context).pop();
                  },
                )
              : Container(),
          ElevatedButton(
            key:Key('posab'),
            child: Text(

              positiveText,
            ),
            onPressed: () async {
              positiveFunction();
...
