...
        child: Column(
          mainAxisAlignment: MainAxisAlignment.start,
          crossAxisAlignment: CrossAxisAlignment.start,
          children: [
            Expanded(child: Container()),
            Text(
              'Welcome to\nWALLET UP',
              style: GoogleFonts.nunito(
                fontSize: 35,
                fontWeight: FontWeight.bold,
              ),
            ),
            const Text(
...
                      'SIGN UP',
                    )),
                const SizedBox(
                  width: 20,
                ),
                ElevatedButton(
                    key:Key('startpgln'),
                    style: ElevatedButton.styleFrom(),
                    onPressed: () {
                      Navigator.of(context).push(MaterialPageRoute(
                          builder: (context) => const LoginPage()));
                    },
                    child: const Text(
...
