...
                                ),
                              ),
                            ),
                            Padding(
                              padding: constants.textFieldPadding,
                              child: PasswordFormFieldWidget(
                                key:Key('unlockpwd'),
                                onSaved: (data) {
                                  password = data!;
                                },
                                style: GoogleFonts.montserrat(),
                                validator: (value) {
                                  if (value == "" || value == null) {
...
                                  child: showProgress
                                      ? const Padding(
                                          padding: EdgeInsets.all(8.0),
                                          child: CircularProgressIndicator(),
                                        )
                                      : ElevatedButton(
                                          key:Key('unlockbtn'),
                                          style: ElevatedButton.styleFrom(),
                                          child: const Text(
                                            'Unlock',
                                          ),
                                          onPressed: () async {
                                            if (_formKey.currentState!
...
